--- a/.circle/config.yaml
+++ b/.circle/config.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: bundle install
-      - run: echo "hello"
+      - run: echo "hello world"
 workflows:
   version: 2
   build_and_test:
