--- a/.circle/config.yaml
+++ b/.circle/config.yaml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+        - name: Set Ruby Version
+        - command:  echo "ruby-2.4" > ~/.ruby-version
+      - run:
         - name: Installing dependencies
         - command: bundle install
       - run:
