--- a/.circle/config.yaml
+++ b/.circle/config.yaml
@@ -15,6 +15,9 @@ jobs:
       - run:
         - name: Running echo
         - command: echo "Hello"
+  test:
+    override:
+      - bundle exec rspec --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec.xml
 workflows:
   version: 2
   build_only:
