--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -6,11 +6,23 @@ jobs:
     steps:
       - checkout
       - run:
-        - name: Installing dependencies
-        - command: bundle install
+          name: Which bundler?
+          command: bundle -v
+
+      # Restore bundle cache
+      - restore_cache:
+          keys:
+            - rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+            - rails-demo-bundle-v2-
       - run:
-        - name: Running echo
-        - command: echo "Hello"
+          name: Bundle Install
+          command: bundle check || bundle install
+
+      # Store bundle cache
+      - save_cache:
+          key: rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
   test:
     override:
       - bundle exec rspec --format progress --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec.xml
